--- a/.github/workflows/sync-to-website.yml
+++ b/.github/workflows/sync-to-website.yml
@@ -14,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout see repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         path: see
 
     - name: Checkout website repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         repository: bilals12/website
         token: ${{ secrets.WEBSITE_REPO_TOKEN }}
@@ -27,12 +27,16 @@ jobs:
 
     - name: Sync files
       run: |
+        set -x  # Enable verbose output
         mkdir -p website/static/js
-        cp see/*.csv website/static/
-        cp see/visualization.js website/static/js/
+        cp see/*.csv website/static/ || echo "No CSV files found"
+        cp see/visualization.js website/static/js/ || echo "visualization.js not found"
         cd website
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add .
-        git diff --quiet && git diff --staged --quiet || git commit -m "Sync CSV and JS files from see repo"
-        git push
+        git status
+        git diff --staged --quiet || (git commit -m "Sync CSV and JS files from see repo" && git push) || echo "No changes to commit"
+      env:
+        GITHUB_TOKEN: ${{ secrets.WEBSITE_REPO_TOKEN }}
+        
